Fixed positioning and general word wrap issues for long words.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,7 @@ html {
 body {
   background-color: #e9ebee;
   letter-spacing: 0.24px;
+  word-break: break-all;
 }
 
 .ReactModal__Body--open {
